--- a/index.html
+++ b/index.html
@@ -122,6 +122,33 @@
     </section><!-- /Details Section -->
 
 
+      <!-- Features Section -->
+      <section id="features" class="features section">
+
+        <div class="container">
+          <div class="container section-title" data-aos="fade-up">
+            <h2 class="text-primary">iTrustPay Features</h2>
+            <p class="text py-3 fst-italic">Experience seamless and secure digital transactions with our cutting-edge features.</p>
+          </div><!-- End Section Title -->
+          <div class="row gy-4">
+            <div class="col-lg-12 col-md-6 shadow-sm d-flex rounded py-5 px-5" data-aos="fade-up" data-aos-delay="600" style="align-items: center; justify-content: space-around;">
+              <div class="col-lg-6">
+                <h1 class="pb-4">Cash Deposits Made Easy</h1>
+                <p class="pb-4">Convert your cash to digital money instantly through our trusted fulfiller network. No bank account needed!</p>
+                <span class="py-3">
+                  <a href="#" class="btn btn-primary text-light py-2 px-3 skew-hover">Try Now</a>  
+                <a href="#" class="btn btn-secondary text-light py-2 px-3 skew-hover">Learn More </a> 
+                </span>
+              </div>
+                <div class="col-md-5 d-flex align-items-center feature-image" data-aos="zoom-out" data-aos-delay="100">
+                  <img src="assets/img/woman.jpg" class="img-fluid " alt="">
+              </div>
+            </div><!-- End Feature Item -->
+        </div>
+  
+      </section><!-- /Features Section -->
+
+
     <!-- Faq Section -->
     <section id="faq" class="faq section ">
 
