--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="d-flex" style="gap: 20px;">
               <a href="#" class="btn btn-success text-light py-2 px-3 ">Get Started</a>
               <a href="#" class="glightbox btn btn-success d-flex align-items-center"> <span class="px-2">Contact Support</span></a>
-              <a href="#" class="glightbox btn btn-success d-flex align-items-center"> <span class="px-2">Leran More</span></a>
+              <a href="#" class="glightbox btn btn-success d-flex align-items-center"> <span class="px-2">Learn More</span></a>
             </div>
           </div>
 
@@ -264,7 +264,7 @@
                 <i class="faq-icon bi bi-question-circle"></i>
                 <h3>How do I register with iTrust Pay? </h3>
                 <div class="faq-content">
-                  <p>iRegistration can be done through our online platform or via an agent. Please visit the registration page or contact customer support for assistance.
+                  <p>Registration can be done through our online platform or via an agent. Please visit the registration page or contact customer support for assistance.
                   </p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
