added a light bg to the logo

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <header id="header" class="header bg-success d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo_itrust.png" alt="" class="hero-bg">
+      <a href="index.html" class="logo  bg-light rounded shadow-sm d-flex align-items-center" style="background-cholor: #ffffff3c;">
+        <img src="assets/img/logo_itrust.png" alt="" class="hero-bg ">
       </a>
 
       <nav id="navmenu" class="navmenu">
