try now button removed

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="d-flex" style="gap: 20px;">
               <a href="#" class="btn btn-success text-light py-2 px-3 ">Get Started</a>
               <a href="#" class="glightbox btn btn-success d-flex align-items-center"> <span class="px-2">Contact Support</span></a>
-              <a href="#" class="glightbox btn btn-success d-flex align-items-center"> <span class="px-2">Learn More</span></a>
+              <a href="#faqs" class="glightbox btn btn-success d-flex align-items-center"> <span class="px-2">Learn More</span></a>
             </div>
           </div>
 
@@ -160,10 +160,6 @@
               <p class="pb-4">
                 With our system, you can withdraw cash from your account and your account balance is updated immediately, ensuring full transparency and accuracy.
               </p>
-              <span class="py-3 d-flex" style="gap: 20px;">
-                <a href="#" class="btn btn-success text-light shadow py-2 px-3 skew-hover">Try Now</a>  
-              <a href="#" class="btn text-success shadow py-2 px-3 skew-hover">Learn More </a> 
-              </span>
             </div>
         </div>
         
@@ -173,10 +169,6 @@
             <p class="pb-4">
               We guarantee that transactions with fulfillers (agents) are reconciled at the end of each day, providing peace of mind and security for cash-related transactions.
             </p>
-            <span class="py-3 d-flex" style="gap: 20px;">
-              <a href="#" class="btn btn-success text-light shadow py-2 px-3 skew-hover">Try Now</a>  
-            <a href="#" class="btn text-success shadow py-2 px-3 skew-hover">Learn More </a> 
-            </span>
           </div>
            
           <div class="col-md-5 col-lg-6 px-5 d-flex align-items-center feature-image" data-aos="zoom-out" data-aos-delay="100">
