--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@
         <div class="social col-lg-5 col-md-6 mt-4 bg-light shadow rounded text-success p-5">
           <p><b>Follow Us On Our Social Media:</b> </p>
           <div class="social-links d-flex  ">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
+            <a href="https://www.facebook.com/share/CLCCngfPaVPVS1DA/" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/sociallender?igsh=MXFyY2ljMXN4djc1cg==" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/sociallender/" target="_blank"><i class="bi bi-linkedin"></i></a>
           </div>
       </div>
       </div>
