--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <p>Transform your financial services experience with iTrust Pay’s reliable, secure, and efficient payment solution. Access our financial platform and perform regular transactions using simple channels like SMS and WhatsApp.</p>
             <div class="d-flex" style="gap: 20px;">
               <a href="https://wa.link/nwmzp6" target="_blank" class="btn btn-success text-light py-2 px-3 ">Get Started</a>
-              <a href="#" class="glightbox btn btn-success d-flex align-items-center"> <span class="px-2">Contact Support</span></a>
-              <a href="#faqs" class="glightbox btn btn-success d-flex align-items-center"> <span class="px-2">Learn More</span></a>
+              <a href="#contact" class=" btn btn-success d-flex align-items-center"> <span class="px-2">Contact Support</span></a>
+              <a href="#faqs" class="btn btn-success d-flex align-items-center"> <span class="px-2">Learn More</span></a>
             </div>
           </div>
 
@@ -317,12 +317,10 @@
       <div class="row gy-4 d-flex" style="align-items: center; justify-content: space-between;">
         <div class="col-lg-5 col-md-6 footer-about shadow bg-light text-success rounded p-5">
           <h4 class="text-success">
-            <p class="py-2" style="font-family: sans-serif;">Follow Us On Our Social Media: </p>
             <b>We’re here to help! 
               Have questions or need support? Get in touch with us.</b>
           </h4>
             <div class="footer-contact  col-lg-4 col-md-6">
-              
               <p><b>Email:</b> <span>customerservice@sociallenderng.com</span></p>
               <p class="mt-3"><b>WhatsApp:</b> <br> <span>08105713874</span></p>
              
