--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
             <p>Transform your financial services experience with iTrust Pay’s reliable, secure, and efficient payment solution. Access our financial platform and perform regular transactions using simple channels like SMS and WhatsApp.</p>
             <div class="d-flex" style="gap: 20px;">
               <a href="https://wa.link/nwmzp6" target="_blank" class="btn btn-success text-light py-2 px-3 ">Get Started</a>
-              <a href="#contact" class=" btn btn-success d-flex align-items-center"> <span class="px-2">Contact Support</span></a>
-              <a href="#faqs" class="btn btn-success d-flex align-items-center"> <span class="px-2">Learn More</span></a>
             </div>
           </div>
 
@@ -109,9 +107,10 @@
             </p> 
             <h3>What We Do</h3>
             <p class="fst-italic">
-              We offer a revolutionary payment service, allowing end users to deposit and withdraw money with ease using SMS and WhatsApp, supported by our network of registered agents (Fulfillers). Our platform guarantees real-time transaction processing and security.
+              We offer a revolutionary payment service, allowing end users to deposit and withdraw money with ease sing channels like WhatsApp and SMS, supported by our network.
+              Our platform guarantees real-time transaction processing and security.
             </p> 
-            <a href="#" class="btn btn-success text-light py-2 px-3 skew-hover">
+            <a href="https://wa.link/nwmzp6" target="_blank"  class="btn btn-success text-light py-2 px-3 skew-hover">
               Get Started Today <i class="bi bi-arrow-right ms-2"></i>
             </a>                       
           </div>
@@ -132,7 +131,7 @@
               <div class="col-lg-6 px-5">
                 <h1 class="pb-4">Simple and Secure Transactions</h1>
                 <p class="pb-4">
-                  iTrust Pay allows users to initiate deposits and withdrawals using familiar and easy-to-use communication channels like SMS and WhatsApp. With simple keywords sent at SMS or message you have your money deposited in your account.
+                  iTrust Pay allows users to initiate Payments using familiar and easy-to-use communication channels like SMS and WhatsApp. With simple keywords sent at SMS or message you have your money deposited in your account.
                 </p>
                 <span class="py-3 d-flex" style="gap: 20px;">
                   <a href="#" class="btn btn-success text-light shadow py-2 px-3 skew-hover">Try Now</a>  
@@ -199,7 +198,7 @@
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box pb-5">
                   <i class="bi bi-arrow-repeat"></i>
-                  <h3>Processing the Transaction </h3>
+                  <h3>Processing the Transaction payment</h3>
                   <p>For <b>deposits,</b> your account will not be immediately impacted.</p>
                   <p class="pb-4">For <b>withdrawals,</b> your account will be updated in real-time.</p>
                 </div>
@@ -321,7 +320,7 @@
               Have questions or need support? Get in touch with us.</b>
           </h4>
             <div class="footer-contact  col-lg-4 col-md-6">
-              <p><b>Email:</b> <span>customerservice@sociallenderng.com</span></p>
+              <p><b>Email:</b> <span>itrustpay@sociallenderng.com</span></p>
               <p class="mt-3"><b>WhatsApp:</b> <br> <span>08105713874</span></p>
              
               <p class="mt-3"><b>Address:</b><br> 5, Ajayi Street, Sabo Yaba, Lagos, Nigeria</p>
@@ -357,7 +356,7 @@
 
     <div class="rounded bg-light my-5" style="width: auto; height: 5px; "></div>
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">iTrustpay</strong> <span>All Rights Reserved | <span id="year"></span></span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Social Lender</strong> <span>All Rights Reserved | <span id="year"></span></span></p>
     </div>
 
   </footer>
