updated the payment

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div class="icon-box" >
                   <i class="bi bi-cash-stack"></i>
                   <h3>Choose Your Transaction Channel  </h3>
-                  <p> Initiate a deposit or withdrawal transaction using either SMS or WhatsApp. The iTrust Pay platform translates your transaction request instantly.</p>
+                  <p> Initiate a payment transaction using either SMS or WhatsApp. The iTrust Pay platform translates your transaction request instantly.</p>
                 </div>
               </div> <!-- End Icon Box -->
 
@@ -342,8 +342,9 @@
           </div>
           <div class="bg-light bg-light shadow my-2 rounded text-success p-5">
             <p class=""><b>Scan the barcode below to get started!</b> </p>
-            <div class=" d-flex  ">
-              <img src="assets/img/barcode.png" class="img-fluid circle-image col-lg-5" alt="">
+            <div class=" d-flex" style="flex-direction: column;">
+              <img src="assets/img/barcode.png" class="img-fluid circle-image col-lg-5 my-3" alt="">
+              <a href="https://wa.link/nwmzp6" target="_blank" class="btn btn-success text-light py-2 px-3">Get Started</a>
             </div> 
           </div>
          
