--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
           </div>
           <div class="col-md-7 " data-aos="fade-up" data-aos-delay="100">
             <h3> Who We Are</h3>
-            <p class="fst-italic">
+            <p class="">
               iTrust Pay is a digital financial services solution designed by Social Lender to empower individuals with access to a seamless and secure financial services platform. We specialize in helping users without access to formal financial services through our unique platform. Our mission is to make financial services accessible to all through innovation, trust, and simplicity
             </p>
-            <p class="fst-italic">
+            <p class="">
               With a focus on security, speed, and user experience, iTrustpay is designed to provide a hassle-free money transfer service for everyone. Our goal is to make financial transactions accessible and convenient, breaking down barriers and building trust one transfer at a time.
             </p> 
             <h3>What We Do</h3>
-            <p class="fst-italic">
+            <p class="">
               We offer a revolutionary payment service, allowing end users to deposit and withdraw money with ease sing channels like WhatsApp and SMS, supported by our network.
               Our platform guarantees real-time transaction processing and security.
             </p> 
