--- a/index.html
+++ b/index.html
@@ -283,47 +283,52 @@
   </main>
 
 
-  <footer id="contact" class="footer px-5 py-4 d-flex" style="background-color: #01612a; font-size: 16px; font-family: poppins; font-weight: 600; line-height: 32.64px; flex-direction: column;">
-      <p class="text-light px-5">
-        We’re here to help! Have questions or need support? <br>
-        Get in touch with us.
-      </p>
-      <div class="d-flex">
-        <div class="col-lg-4 col-md-6   text-light  p-5">
+  <footer id="footer" class="footer dark-backgroundy text-light" style="background-color: #01612A;">
+
+    <div class="container footer-top">
+      <div class="row gy-4">
+        <div class="col-lg-4 col-md-6 footer-about">
+            <span class="sitename"> We’re here to help! Have questions or need support? <br>
+              Get in touch with us.</span>
+          <div class="footer-contact pt-3">
             <p><b>Email:</b> <br><span>itrustpay@sociallenderng.com</span></p>
             <p class="mt-3"><b>WhatsApp:</b> <br> <span>08105713874</span></p>
             <p class="mt-3"><b>Address:</b><br> 5, Ajayi Street, Sabo Yaba, Lagos, Nigeria</p>
+          </div>
         </div>
 
-        <div class="d-flex col-lg-4 col-md-6 mt-4 mr-3" style="flex-direction: column;">
-          <div class="text-light">
-              <p>Follow Us On Our Social Media:</p>
-              <div class="social-links text-white d-flex  ">
-                <a href="https://x.com/sociallenderng?t=YTEcrhCdJYns9AQCI02iwA&s=09" target="_blank"><i class="bi bi-twitter-x"></i></a>
-                <a href="https://www.facebook.com/share/CLCCngfPaVPVS1DA/" target="_blank"><i class="bi bi-facebook"></i></a>
-                <a href="https://www.instagram.com/sociallender?igsh=MXFyY2ljMXN4djc1cg==" target="_blank"><i class="bi bi-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/sociallender/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                <a href="https://wa.link/nwmzp6" target="_blank"><i class="bi bi-whatsapp"></i></a>
-              </div> 
+        <div class="col-lg-4 col-md-6 footer-about">
+          <span class="sitename"> Follow Us On Our Social Media:</span>
+          <div class="social-links d-flex mt-4 mb-5 text-light">
+            <a href="https://x.com/sociallenderng?t=YTEcrhCdJYns9AQCI02iwA&s=09" target="_blank"><i class="bi bi-twitter-x text-light"></i></a>
+            <a href="https://www.facebook.com/share/CLCCngfPaVPVS1DA/" target="_blank"><i class="bi bi-facebook text-light"></i></a>
+            <a href="https://www.instagram.com/sociallender?igsh=MXFyY2ljMXN4djc1cg==" target="_blank"><i class="bi bi-instagram text-light"></i></a>
+            <a href="https://www.linkedin.com/company/sociallender/" target="_blank"><i class="bi bi-linkedin text-light"></i></a>
+            <a href="https://wa.link/nwmzp6" target="_blank"><i class="bi bi-whatsapp text-light"></i></a>
           </div>
-          <div class="mt-3 text-light">
-            <p>Scan the barcode below to get started!</p>
-            <div class=" bg-white col-md-2 rounded">
-              <img src="assets/img/barcode.jpg" class="img-fluid " alt="">
-            </div> 
-           </div>
-        </div> 
-        
-        <div class="col-lg-4 col-md-6   text-light  p-5">
-          <p>iTrustPay Powered by Social Lender</p>
-          <img src="assets/img/logo-2.svg" class="img-fluid " alt="">
+          <span class="sitename">Scan the barcode below to get started!</span> 
+          <div class=" bg-white col-md-2 mt-3 mb-5 rounded">
+            <img src="assets/img/barcode.jpg" class="img-fluid " alt="">
+          </div>
         </div>
+
+        <div class="col-lg-4 col-md-6 footer-about" >
+            <span class="sitename"> iTrustPay Powered by Social Lender</span>
+          <div class="social-links d-flex mt-4">
+            <img src="assets/img/logo-2.svg" class="img-fluid " alt="">
+          </div>
+        </div>
+
+      
       </div>
-      <div class="rounded bg-light my-5 mx-5" style="width: auto; height: 2px; "></div>
-      <div class="container text-center">
-        <p class="text-light">©  Copyright Social Lender All Rights Reserved | 2024</p>
-      </div>
+    </div>
+
+    <div class="container copyright text-center mt-4" style="border-top: 1px solid #edf5f1;">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename"> Social Lender | <span id="year"></strong> <span>All Rights Reserved</span></p>
+    </div>
+
   </footer>
+
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
