--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul class="">
           <li  ><a href="#hero" class="active" style="color: black;">Home</a></li>
           <li><a href="#about" style="color: black;">About</a></li>
-          <li><a href="#contact" style="color: black;">Contact</a></li>
+          <li><a href="#footer" style="color: black;">Contact</a></li>
           <li><a href="#features" style="color: black;">Features</a></li>
           <li><a href="#howitworks" style="color: black;">How It Works</a></li>
           <li><a href="#faqs" style="color: black;">FAQs</a></li>
@@ -279,7 +279,8 @@
 
       </div>
 
-    </section><!-- /Faq Section -->
+    </section>
+    <!-- /Faq Section -->
   </main>
 
 
